--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-slide-up-down": "^2.0.1",
     "vuex": "^3.1.3",
     "vuex-persistedstate": "^3.0.1"
   },
